2011-04-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el
	(gnus-registry--split-fancy-with-parent-internal): Fix loop bugs.

2011-04-20  David Engster  <dengste@eml.cc>

	* tests/gnustest-nntp.el: New file for simple NNTP testing.

	* Makefile.in (test-nntp): New rule.
	(check): Add it.
	(test-registry): Change '$(EMACS_COMP)' to '$(EMACS) $(FLAGS)'.

2011-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-registry.el (gnus-registry-action)
	(gnus-registry-fetch-header-fast):
	Don't use mail-header that looks an internal function of mailheader.el.

2011-04-19  Glenn Morris  <rgm@gnu.org>

	* time-date.el (time-to-days): Remove unused local variables.

2011-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-registry.el: Eliminate cl functions.
	(gnus-registry-sort-addresses): New function that replaces mapcan.
	(gnus-registry-action, gnus-registry-spool-action)
	(gnus-registry-split-fancy-with-parent)
	(gnus-registry-fetch-recipients-fast): Use it.
	(gnus-registry-import-eld): Replace delete* with dolist + delq.

	* registry.el (initialize-instance, registry-lookup)
	(registry-lookup-breaks-before-lexbind, registry-lookup-secondary)
	(registry-lookup-secondary-value, registry-search, registry-delete)
	(registry-insert, registry-reindex, registry-size, registry-prune):
	Use eval-and-compile.

2011-04-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-reindex): New method to recreate the secondary
	registry indices.

	* gnus-registry.el (gnus-registry-fixup-registry): Use it if the
	tracked field changes.
	(gnus-registry-unfollowed-addresses, gnus-registry-track-extra)
	(gnus-registry-action, gnus-registry-spool-action)
	(gnus-registry-handle-action)
	(gnus-registry--split-fancy-with-parent-internal)
	(gnus-registry-split-fancy-with-parent)
	(gnus-registry-register-message-ids): Add recipient tracking on spool,
	move, and delete actions, and for fancy splitting with parent.
	(gnus-registry-extract-addresses)